# LettaPlus

./: .gitignore  AGENTS.md  CLAUDE.md  ChatGPT-Agent_workflow_schema_review.md  Dockerfile.letta  E2E_SIM.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.claude/: settings.local.json
agents/: knowledge-workers.af.json  planner.af  planner_abbr.af  worker.af  worker_abbr.af
chroma/: Dockerfile
dcf-skill-studio/: .gitignore  README.md  forge.config.ts  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
dcf_mcp/: Dockerfile  requirements.txt  server.py
docs/: Architectural_Evolution_Opus.md  Complexity-Aware Workflow Decomposition - Unifying Model Selection with Dynamic Capabilities for Cost-Effective Agentic AI.md  DOCUMENTATION_AUDIT.md  E2E_SIM.md  Hybrid-Memory-Patent-Proposal.md  Overall_Codex.md  Overall_Jules.md  Practical Foundation Model Selection for Agentic AI - The Adaptive Model Selection Protocol (AMSP).md  Self-Evolving-Agent-Architecture.md  Self-Evolving-Agent-Whitepaper.md  TESTING_PLAN.md  TESTING_PLAN_Codex.md  TESTING_PLAN_Combined.md  TESTING_PLAN_Jules.md  TESTING_PLAN_Simple.md  TEST_PLAN_Combined.md  TODO-AMSP-DCF-Integration.md  (+2 more)
graphiti/: Dockerfile  ENTITY_TYPES.md  graphiti_mcp_server_v1.py  graphiti_mcp_server_v2.py  pyproject.toml  test_client.py
graphiti/config/: config-docker-falkordb.yaml
graphiti/src/: graphiti_mcp_server.py
graphiti/src/models/: entity_types.py
(+258 files in other folders)
