[project]
name = "graphiti-mcp"
version = "0.4.0"
description = "Graphiti MCP Server"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    # "mcp==1.8.1",
    "fastmcp>=2.10.0", # streamable http is supported since 2.x
    "openai>=1.68.2",
    # "graphiti-core>=0.17.3", # only works for neo4j
    "graphiti-core[falkordb]>=0.23.1", # add fldb specific dependencies
    "azure-identity>=1.21.0",
    "mcp[cli]>=1.11.0",
]
